Fix alignment with CSV/header icons on admin, report, device views
Refactored "nd_device-name" id to "nd_content-header-right"

--- a/Netdisco/share/public/css/netdisco.css
+++ b/Netdisco/share/public/css/netdisco.css
@@ -234,7 +234,7 @@ td > form.nd_inline-form {
 }
 
 /* group device and download icons on the right */
-#nd_search-results-right {
+#nd_content-header-right {
   float: right;
   margin-bottom: 0px;
   margin-top: 9px;
